# keel

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .ralph-tools.example.json  AGENTS.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  INVARIANTS.md  PROMPT_build.md  PROMPT_plan.md  RALPH.md  README.md  Ralph.md  commitlint.config.js  loop.sh  package.json  pnpm-lock.yaml  prettier.config.js  pyproject.toml  ralph-dashboard.py  ralph.py  tsconfig.base.json  tsconfig.json  turbo.json
.claude/: settings.json
.claude/agents/: bmad-agent-analyst.md  bmad-agent-architect.md  bmad-agent-dev.md  bmad-agent-pm.md  bmad-agent-tech-writer.md  bmad-agent-ux-designer.md  bmad-cis-agent-brainstorming-coach.md  bmad-cis-agent-creative-problem-solver.md  bmad-cis-agent-design-thinking-coach.md  bmad-cis-agent-innovation-strategist.md  bmad-cis-agent-presentation-master.md  bmad-cis-agent-storyteller.md  bmad-tea.md
.claude/hooks/: block-secret-access.sh
.githooks/: doc-budget.json
.github/: .release-please-manifest.json  release-please-config.json  renovate.json
.github/workflows/: ci.yml
.ralph/: @plan.md  PROMPT_build.md  PROMPT_plan.md  config.toml  round2-fix-arc.md  round3-fix-arc.md  round4-fix-arc.md  round5-fix-arc.md
blog-posts/: 01-the-shipping-gap.md  02-decided-already.md  03-in-the-loop-on-the-loop.md  04-enforce-it-or-forget-it.md  05-introducing-keel.md
docs/: ralph.md
scripts/: bootstrap-bmad-agents.py  prepare-prek.mjs
tests/: test_ralph.py
tools/: check-absorption-sha-reachable.sh  check-probe-domain-lockstep.sh  check-ralph-doc-budget.sh
(+222 files in other folders)
